text-overflow ... fixed

--- a/sass/body.scss
+++ b/sass/body.scss
@@ -431,12 +431,13 @@ https://developer.mozilla.org/fr/docs/Web/CSS/animation-direction  =>> alternate
   width: 100%;
   height: 100%;
   padding: 1rem;
-  text-overflow: ellipsis; /*NOT work*/
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /*white-space: nowrap; ==> barre de defilement horizontale*/
+  @media (max-width: 420px) {
+    width: 70%;
+  }
+
   & p {
     @media (max-width: 450px) {
       font-size: 0.9rem;
@@ -444,6 +445,9 @@ https://developer.mozilla.org/fr/docs/Web/CSS/animation-direction  =>> alternate
   }
   & .sub-title {
     font-size: 0.8rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 }
 
